Fix for Bug 37054 - make long titles wrap around the review button instead of pushing it down

--- a/modules/ext.pageTriage.views.list/ext.pageTriage.listItem.css
+++ b/modules/ext.pageTriage.views.list/ext.pageTriage.listItem.css
@@ -67,6 +67,7 @@
 	float: right;
 	font-weight: bold;
 	font-size: 1em;
+	margin-left: 1em;
 }
 
 /* info about the article's author */
